# mahalanobis-distance

./: CMakeLists.txt  main.cpp  test_mahal_distance.cpp
mahalanobis_distance/: mahal_distance.cpp  mahal_distance.h
